src/css/index.styl
.color--
  &primary
    color: #f18432
  &secondary
    color: #f39b4a
  &white
    color: #fff
  &black
    color: #333
  &gray
    color: #aaa

.border--
  &primary
    border-color: #f18432
  &secondary
    border-color: #f39b4a
  &white
    border-color: #fff
  &black
    border-color: #333
  &gray
    border-color: #aaa

.background--
  &primary
    background-color: #f18432
  &secondary
    background-color: #f39b4a
  &white
    background-color: #fff
  &black
    background-color: #333
  &gray
    background-color: #aaa

.float
  &--right
    float: right
  &--left
    float: left

.align
  &--right
    text-align: right
  &--left
    text-align: left

*
  box-sizing: border-box

.clear:after
  content: ""
  display: block
  clear: both

body
  scroll-snap-type: y proximity
  overflow-y: scroll

a
  color: #f39b4a
  
  &:active,
  &:focus,
  &:hover
    
    &,
    & i:before
      color: #f18432

nav
  -webkit-flex: 1 1 0px
  -ms-flex: 1 1 0px
  flex: 1 1 0px
  height: 10vh
  border-bottom: 1px solid
  display: -ms-flexbox
  display: -webkit-flex
  display: flex
  -webkit-justify-content: space-between
  -ms-flex-pack: justify
  justify-content: space-between

.nav
  &__trigger
    -webkit-flex: 0 0 auto
    -ms-flex: 0 0 auto
    flex: 0 0 auto
    font-size: 3vh
    vertical-align: middle

  &__input
    -webkit-flex: 1 1 287px
    -ms-flex: 1 1 287px
    flex: 1 1 287px
    border: none
    outline: none
    pointer-events: none
    padding: 0
    margin: 0

    @media (max-width: 1005px)
      max-width: 287px

  &__menu
    display: none
    list-style: none
    position: absolute
    top: 0
    right: 10vw
    border: 1px solid
    font-size: 18px
    line-height: 48px
    padding: 10px 20px
    
    ^[0]__input:focus + &,
    ^[0]__input:active + &,
    &:hover
      display: block

header,
footer
  position: fixed
  right: 0
  left: 0
  height: 10vh
  padding: 0 5vw
  line-height: 10vh
  z-index: 10

header
  top: 0
  border-bottom: 1px solid
  font-size: 5vh
  line-height: 10vh
  display: -ms-flexbox
  display: -webkit-flex
  display: flex

  h1
    -webkit-flex: 0 0 auto
    -ms-flex: 0 0 auto
    flex: 0 0 auto
    font-size: inherit
    margin: 0
    font-weight: normal

  @media (max-width: 1005px)
    font-size: 3vh

footer
  bottom: 0
  border-top: 1px solid

  .footer-link
    font-size: 5vh
    line-height: 10vh
    margin-right: 2vw
    text-decoration: none
    
    &:last-child
      margin-right: 0

section
  min-height: 100vh
  display: -ms-flexbox
  display: -webkit-flex
  display: flex
  -webkit-justify-content: center
  -ms-flex-pack: center
  justify-content: center
  -webkit-align-content: center
  -ms-flex-line-pack: center
  align-content: center
  -webkit-align-items: center
  -ms-flex-align: center
  align-items: center
  -webkit-flex-wrap: wrap
  -ms-flex-wrap: wrap
  flex-wrap: wrap
  padding: 10vh 5vw
  scroll-snap-align: start

.quote
  display: -ms-flexbox
  display: -webkit-flex
  display: flex
  align-items: flex-end

  img + p,
  p + img
    margin-left: 3em

  img
    width: 90px
    border-radius: 45px
    border-width: 3px
    border-style: solid

  &__content
    -webkit-flex: 1
    -ms-flex: 1
    flex: 1
    position: relative
    
    &:before,
    &:after
      font-size: 3em
      position: absolute
      color: #333
      font-family: serif

    &:before
      content: '\201C'
      top: -0.5em
      left: -0.5em
    &:after
      content: '\201D'
      bottom: -0.5em
      right: -0.5em
      line-height: 0.5em

.role
  padding: 1vh 0
  
  p
    padding: 0
    margin: 5px 0

.tags
  display: -ms-flexbox
  display: -webkit-flex
  display: flex
  -webkit-flex-wrap: wrap
  -ms-flex-wrap: wrap
  flex-wrap: wrap
  padding: 2px 0 0 2px

.tag
  -webkit-flex: 1 0 auto
  -ms-flex: 1 0 auto
  flex: 1 0 auto
  margin: 0 2px 2px 0
  background-color: #f18432
  color: #fff
  border-radius: 4px
  padding: 5px 10px

#about
  & > img
    width: 360px
    max-width: 100%
    border: 1px solid

  & > article
    width: 100%

    @media (min-width: 829px)
      width: 445px
      padding-left: 30px

#recommendations
  background-size: 100% 100%

  figure
    margin: 3vh 10vw
  
  figcaption
    font-style: italic

    &.align--right
      margin-right: calc(3em + 90px)

      &:after
        content: ' -'

    &:not(.align--right)
      margin-left: calc(3em + 90px)

      &:before
        content: '- '

#experience
  h1
    width: 100%
    margin-bottom: 1vh

  @media (min-width: 829px)
    .skew
      width: 75vw
      -webkit-transform: skewX(15deg)
      -ms-transform: skewX(15deg)
      transform: skewX(15deg)

      &__inner
        padding-top: 1vh
        padding-left: 3vh

      &__item
        p
          -webkit-transform: skewX(-15deg)
          -ms-transform: skewX(-15deg)
          transform: skewX(-15deg)

    .corner--top-left
      position: relative

      &:before,
      &:after
        content: ''
        position: absolute
        top: -5px
        left: -5px

      &:before
        bottom: -5px
        width: 5px
        background-image: -webkit-gradient(linear, 0 100%, 0 0, from(transparent), to(#f39b4a))
        background-image: -webkit-linear-gradient(#f39b4a, transparent)
        background-image: -moz-linear-gradient(#f39b4a, transparent)
        background-image: -o-linear-gradient(#f39b4a, transparent)

      &:after
        right: -5px
        height: 5px
        background-image: -webkit-gradient(linear, 0 0, 100% 0, from(#f39b4a), to(transparent))
        background-image: -webkit-linear-gradient(left, #f39b4a, transparent)
        background-image: -moz-linear-gradient(left, #f39b4a, transparent)
        background-image: -o-linear-gradient(left, #f39b4a, transparent)

#skills
  &__cloud
    height: 70vh
    width: 100%

#interests
  background-position: center
  background-size: cover

#hex-grid
  position: relative
  width: 60vh
  margin: 0
  padding: 0

  li
    list-style-type: none
    position: relative
    float: left
    width: 27.85714285714286%
    padding: 0 0 32.16760145166612% 0
    -o-transform: rotate(-60deg) skewY(30deg)
    -moz-transform: rotate(-60deg) skewY(30deg)
    -webkit-transform: rotate(-60deg) skewY(30deg)
    -ms-transform: rotate(-60deg) skewY(30deg)
    transform: rotate(-60deg) skewY(30deg)
    overflow: hidden
    visibility: hidden

    &:nth-child(3n+2)
      margin: 0 1%

    &:nth-child(6n+4)
      margin-left: 0.5%
    
    &:nth-child(6n+4),
    &:nth-child(6n+5),
    &:nth-child(6n+6)
      margin-top: -6.9285714285%
      margin-bottom: -6.9285714285%
      -o-transform: translateX(50%) rotate(-60deg) skewY(30deg)
      -moz-transform: translateX(50%) rotate(-60deg) skewY(30deg)
      -webkit-transform: translateX(50%) rotate(-60deg) skewY(30deg)
      -ms-transform: translateX(50%) rotate(-60deg) skewY(30deg)
      transform: translateX(50%) rotate(-60deg) skewY(30deg)

    *
      visibility: visible

.hexagon
  position: absolute
  top: 0
  left: 0
  width: 100%
  height: 100%
  -o-transform: skewY(-30deg) rotate(60deg)
  -moz-transform: skewY(-30deg) rotate(60deg)
  -webkit-transform: skewY(-30deg) rotate(60deg)
  -ms-transform: skewY(-30deg) rotate(60deg)
  transform: skewY(-30deg) rotate(60deg)
  overflow: hidden

  p
    margin: 0
    padding: 0.5vh
    position: absolute
    top: 20%
    left: 20%
    width: 60%
    height: 60%
    font-size: 1.4vh
    display: -ms-flexbox
    display: -webkit-flex
    display: flex
    -webkit-flex-direction: column
    -ms-flex-direction: column
    flex-direction: column

    &.w,
    &.nw,
    &.sw
      border-left: 1px solid
      text-align: left
      -webkit-align-items: flex-start
      -ms-flex-align: flex-start
      align-items: flex-start

    &.e,
    &.ne,
    &.se
      border-right: 1px solid
      text-align: right
      -webkit-align-items: flex-end
      -ms-flex-align: flex-end
      align-items: flex-end

    &.s,
    &.se,
    &.sw
      border-bottom: 1px solid
      -webkit-justify-content: flex-end
      -ms-flex-pack: flex-end
      justify-content: flex-end

    &.n,
    &.ne,
    &.nw
      border-top: 1px solid
      -webkit-justify-content: flex-start
      -ms-flex-pack: flex-start
      justify-content: flex-start

    &.e
    &.w,
    &.marathon
      -webkit-justify-content: center
      -ms-flex-pack: center
      justify-content: center

    &.n,
    &.s,
    &.marathon
      text-align: center
      -webkit-align-items: center
      -ms-flex-align: center
      align-items: center

    &.marathon
      -webkit-align-content: center
      -ms-flex-line-pack: center
      align-content: center

      b
        font-size: 5vh

    &.other
      -webkit-justify-content: center
      -ms-flex-pack: center
      justify-content: center

  img
    height: 15vh
    position: absolute
    top: 50%
    left: 50%
    -o-transform: translate(-50%, -50%)
    -moz-transform: translate(-50%, -50%)
    -webkit-transform: translate(-50%, -50%)
    -ms-transform: translate(-50%, -50%)
    transform: translate(-50%, -50%)

.if-mobile
  display: none
  
  @media (max-width: 829px)
    display: block

    & + .else
      display: none

